# ipc_stuff

./: .gitignore  CMakeLists.txt  README.md  cons.c  debug.h  ipc.h  macro_meta_programming.h  macros.h  main.c  makefile  ms.h  prod.c  prod_cons_run.sh  ring_queue.h  ring_queue_impl.h
examples/benchmark-throughput/: cons.c  makefile  prod.c
examples/big_seq_lock_demo/: cons.c  makefile  prod.c
examples/calm_seq_lock_demo/: cons.c  makefile  prod.c
examples/cpp_big_seq_lock_demo/: cons.cpp  makefile  prod.cpp
examples/cpp_calm_seq_lock_demo/: cons.cpp  makefile  my_struct.h  prod.cpp
examples/cpp_ipc_brief_demo/: cons.cpp  god.cpp  my_struct.h  prod.cpp
examples/cpp_ipc_demo/: cons.cpp  god.cpp  life.cpp  makefile  prod.cpp
examples/cpp_ring_queue_demo/: cons.cpp  prod.cpp
examples/cpp_seq_lock_demo/: cons.cpp  makefile  prod.cpp
examples/msg_demo/: cons.c  makefile  prod.c  prod.cpp
examples/old_msg_demo/: cons.c  makefile  prod.c
examples/opt_queue_demo/: cons.c  makefile  prod.c
examples/ring_queue_benchmark_throughput/: README.md  cons.c  prod.c
examples/ring_queue_cache_demo/: cons.c  makefile  prod.c
examples/ring_queue_demo/: cons.c  makefile  my_struct.h  prod.c
examples/seq_lock_demo/: cons.c  makefile  prod.c
include/: big_seq_lock.h  calm_seq_lock.h  ipc.h  macro.h  msg.h  old_msg.h  opt_queue.h  ring_queue.h  seq_lock.h  smp.h
include/ipc/: big_seq_lock.h  debug.h  hash.h  ipc.h  macro.h  msg.h  ring_queue.h  ring_queue_cache.h  seq_lock.h  shmem.h  smp.h
